[package]
name = "indice"
version = "0.1.0"
edition = "2021"
authors = ["Alfre <hello@madewithbyt.es>"]
description = "A command line tool with configuration support"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
config = { version = "0.13", features = ["yaml"] }
clap = { version = "4.4", features = ["derive"] }
clap_complete = "4.4"
dirs = "5.0"
